Changes for 1.9

 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.3

 - [ZBX-1930] all top indents of icon labels now is equal (Maxim Andruhovich / AM)
 - [ZBX-2152] fixed names of SNMPv3 security levels (asaveljevs)
 - [ZBX-2563] fixed warnings in m4/libunixodbc.m4 with newer autotools (asaveljevs)
 - [ZBX-2543] fixed password reset when edit user profile and auth type is not internal (Vedmak)
 - [ZBX-2524] fixed deleting media types (Aly)
 - [ZBX-2557] fixed incorrect message when add proxy with name that already exist (Vedmak)
 - [ZBX-2492] fixed japanese translation, all sprintf and their placeholders have been removed from phrases from all languages (Maxim Andruhovich / AM)
 - [ZBX-2551] fixed not shown errors in configuration/triggers (Vedmak)
 - [ZBX-2552] fixed multiple events for triggers with complicated expressions (Sasha)
 - [ZBX-2532] fixed outdated information in "server info" screen element (Sasha)
 - [ZBXNEXT-377] added support of passive mode for proxies (Sasha)
 - [ZBX-2556] added dropdown length limit in frontend (Aly)
 - [ZBX-2548] fixed sorting in items popup when adding items to simple graph, disabled dropdown with tooltip showing filtration added as well (Maxim Andruhovich / AM)
 - [ZBX-2547] fixed errors in installation (Aly)
 - [ZBX-2277] fixed menu position on screen (Aly)
 - [ZBX-2339] fixed height of row in resource "Plain text" in screens (Aly)
 - [ZBX-2459] fixed setting trigger value to unknown on disabling (Aly)
 - [ZBX-2414] added PHP session module check as requirement in dashboard and installation (Maxim Andruhovich / AM)
 - [ZBX-2526] fixed graph refresh problem when referred from screens page (Aly)
 - [ZBX-2525] improved actions API code (Vedmak)
 - [ZBX-2324] fixed guest user settings not being stored (Vedmak)