@@ -6,6 +6,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBXNEXT-343] added possibility to unlink and clear templates when mass update hosts templates (Vedmak)
  - [ZBX-1930] all top indents of icon labels now is equal (Maxim Andruhovich / AM)
  - [ZBX-2152] fixed names of SNMPv3 security levels (asaveljevs)
  - [ZBX-2563] fixed warnings in m4/libunixodbc.m4 with newer autotools (asaveljevs)
